# ELMA

./: CMakeLists.txt  README.md
projects/: CMakeLists.txt
projects/Analyzer/: CMakeLists.txt
projects/SimpleSimulatorNextNeighborInteraction/: mainSimpleSimulatorNextNeighborInteraction.cpp
projects/SimpleSimulatorNextNeighborInteractionWithTanglotron/: CMakeLists.txt  FeatureTanglotronSR.h  ReadTanglotron.h  ReadTorque.h  TanglotronMotor.h  WriteTanglotron.h  WriteTorque.h  mainSimpleSimulatorNextNeighborInteractionWithTanglotron.cpp
projects/WangLandauSimulatorExtendedShellInteraction/: CMakeLists.txt  FeatureExcludedVolumeSingleNode.h  FeatureExtendedShellInteraction.h  FeatureExtendedShellInteractionReadWrite.h  FeatureWangLandauExtendedShellInteraction.h  UpdaterAdaptiveWangLandauSamplingExtendedShellInteraction.h  UpdaterAdaptiveWangLandauSamplingNextNeighbor.h  mainWangLandauSimulatorExtendedShellInteraction.cpp
projects/WangLandauSimulatorExtendedShellInteractionRg2/: CMakeLists.txt  FeatureExtendedShellInteractionReadWrite.h  FeatureWangLandauExtendedShellInteraction.h  UpdaterAdaptiveWangLandauSamplingNextNeighbor.h  mainWangLandauSimulatorExtendedShellInteractionRg2.cpp
projects/WangLandauSimulatorNextNeighbor/: CMakeLists.txt  FeatureWangLandauNextNeighbor.h  Histogram1D.h  LinearChain_N32_PerXYZ128_NNS_E-0.4.bfm  ReadInHGLnDOS.h  UpdaterAdaptiveWangLandauSamplingNextNeighbor.h  mainWangLandauSimulatorNextNeighbor.cpp
projects/WangLandauSimulatorNextNeighborOpenMP_Rg2/: CMakeLists.txt  FeatureWangLandauNextNeighbor.h  ReadInHGLnDOS.h  (+2 more)
(+10 files in other folders)
